# murder-mystery-fyi

./: .gitignore  insert_team.py  pyproject.toml  run.py
murder_mystery/: __init__.py  game.py  login.py
murder_mystery/static/css/: quiz.css  style.css
murder_mystery/templates/: base.html  login.html  quiz.html
